--- a/jizera.conf
+++ b/jizera.conf
@@ -1,9 +1,9 @@
 # <VirtualHost *>
   # ServerName galaktyka.duckdns.org
   # WSGIDaemonProcess jizerazero user=gronki group=gronki threads=3
-  WSGIScriptAlias /jz /home/gronki/jizerazero/jizera.wsgi
+  WSGIScriptAlias /jz /var/www/jizera/jizera.wsgi
 
-  <Directory /home/gronki/jizerazero>
+  <Directory /var/www/jizera>
     # WSGIProcessGroup jizerazero
     # WSGIApplicationGroup %{GLOBAL}
     WSGIScriptReloading On
