figured out deployment

--- a/jizera.conf
+++ b/jizera.conf
@@ -1,14 +1,9 @@
-# <VirtualHost *>
-  # ServerName galaktyka.duckdns.org
-  # WSGIDaemonProcess jizerazero user=gronki group=gronki threads=3
-  WSGIScriptAlias /jz /var/www/jizera/jizera.wsgi
+WSGIDaemonProcess jizera python-home=/var/www/jizera/venv
+WSGIProcessGroup jizera
+WSGIApplicationGroup %{GLOBAL}
 
-  <Directory /var/www/jizera>
-    # WSGIProcessGroup jizerazero
-    # WSGIApplicationGroup %{GLOBAL}
-    WSGIScriptReloading On
-    # Order deny,allow
-    # Allow from all
-    Require all granted
-  </Directory>
-# </VirtualHost>
+WSGIScriptAlias /jz /var/www/jizera/jizera.wsgi
+
+<Directory /var/www/jizera>
+  Require all granted
+</Directory>
